# akros2

./: .gitignore  README.md  index.md  style.css
akros2_base/: README.md  package.xml  setup.py
akros2_base/akros2_base/: motion_detector.py
akros2_base/launch/: camera_launch.py  control_launch.py  laser_launch.py  sensor_fusion_launch.py  teleop_launch.py  twist_mixer_launch.py
akros2_bringup/: README.md  package.xml  setup.py
akros2_bringup/config/: mqtt_client_config.yaml
akros2_bringup/launch/: basestation_launch.py  bringup_launch.py  mqtt_client_launch.py  viz_launch.py
akros2_bringup/viz/: default.rviz  default_foxglove.json
akros2_description/: README.md  package.xml  setup.py
akros2_description/launch/: description_launch.py
akros2_description/urdf/: robot.common.xacro  robot.control.xacro  robot.gazebo.xacro  robot.urdf  robot.urdf.xacro
akros2_firmware/: LICENSE  README.md  akros2_base_config.h  akros2_firmware.ino
akros2_msgs/: README.md  package.xml
akros2_setup/: .bashrc  README.md  oled.py
akros2_setup/steamdeck_desktop/desktop_apps/: rqt.desktop  rviz2.desktop  ubuntu.desktop
akros2_teleop/: README.md  setup.py
akros2_teleop/akros2_teleop/: joy_mode_handler.py  teleop_node.py  twist_mixer_node.py
akros2_teleop/launch/: joy_launch.py  teleop_launch.py
docs/: README.md  _config.yml  architecture.md  design.md  index.md  quick-start.md
docs/_includes/: footer-custom-icons.html  footer-extra.html
docs/_layouts/: default.html
setup/: .bashrc
setup/rules/: 99-usb-serial.rules
setup/services/: oled.service
(+16 files in other folders)
