<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>akros2_bringup</name>
  <version>0.0.0</version>
  <description>AKROS2 bringup files</description>
  <maintainer email="adityakamath@live.com">Aditya Kamath</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>akros2_base</depend>
  <depend>akros2_description</depend

  <depend>mqtt_client</depend>

  <depend>foxglove_bridge</depend>
  <depend>rosbridge_server</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
